--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/solitaire.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      type="image/svg+xml"
+      href="/solitaire-dark.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="167x167"
+      type="image/svg+xml"
+      href="/solitaire-dark.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      type="image/svg+xml"
+      href="/solitaire-dark.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="512x512"
+      type="image/png"
+      href="/solitaire-dark.png"
+    />
     <title>Solitaire</title>
   </head>
   <body>
